# GAUSS

./: .gitignore  CMakeLists.txt  EnergyPrincipalStretchHFixed.h
data/meshesTetWild/archbridge/: archbridge_0.ele  archbridge_0.node
data/meshesTetWild/arm/: arm_1.ele  arm_1.mesh  arm_1.node  arm_4.ele  arm_4.mesh  arm_4.node
data/meshesTetWild/arma_flip/: arma_flip_0.node  arma_flip_1.node  arma_flip_2.node  arma_flip_3.node  arma_flip_4.node
data/meshesTetWild/ball/: ball_-1.ele  ball_-1.node  ball_-2.ele  ball_-2.node  ball_0.ele  ball_0.node  ball_1.ele  ball_1.node  ball_2.ele  ball_2.node  ball_3.ele  ball_3.node
data/meshesTetWild/brick_vert/: brick_vert_2.node  brick_vert_4.node
data/meshesTetWild/bridge/: bridge_1.ele  bridge_1.node
data/meshesTetWild/cactus/: cactus_4.ele  cactus_4.node  cactus_5.ele  cactus_5.node
data/meshesTetWild/cat_toy/: cat_toy_0.mesh  cat_toy_0.node  cat_toy_5.ele  cat_toy_5.node
data/meshesTetWild/eiff_simple/: eiff_simple_0.ele  eiff_simple_0.node  eiff_simple_1.ele  eiff_simple_1.node  eiff_simple_2.ele  eiff_simple_2.node
data/meshesTetWild/fiboball/: fiboball_0.mesh  fiboball_0.node  fiboball_5.ele  fiboball_5.node
data/meshesTetWild/hex_sheet/: hex_sheet_0.mesh  hex_sheet_0.node  hex_sheet_5.ele  hex_sheet_5.node
data/meshesTetWild/hyperboloid/: hyperboloid_0.ele  hyperboloid_0.mesh  hyperboloid_0.node
data/meshesTetWild/moebius/: moebius_0.ele  moebius_0.mesh  moebius_0.node  moebius_5.node
data/meshesTetWild/rope/: rope_0.ele  rope_0.node
data/meshesTetWild/sacred/: sacred_0.node  sacred_5.ele  sacred_5.node
data/meshesTetWild/spring/: spring_0.mesh  spring_0.node  spring_5.ele  spring_5.node
data/meshesTetWild/torusknot/: torusknot_0.node  torusknot_4.node  torusknot_5.ele  torusknot_5.node
data/meshesTetWild/tree/: tree_0.ele  tree_0.node
data/meshesTetWild/tree_real/: tree_real_0.ele  tree_real_0.node  tree_real_4.node
data/meshesTetWild/water_tower/: water_tower_0.ele  water_tower_0.node
src/Base/include/: Assembler.h  ConstraintFixedPoint.h  PhysicalSystem.h  TimeStepper.h  TimeStepperEulerImplicitLinear.h
src/Core/include/: UtilitiesEigen.h
src/EigenFit/cpp/: resultsUtilities.cpp
src/EigenFit/include/: EigenFit.h  EigenFitARAP.h  EigenFitCoRot.h  EigenFitLinear.h  StepperEigenFitRatioTest.h  TimeStepperEigenFitARAPIM.h  TimeStepperEigenFitCoRotBE.h  TimeStepperEigenFitCoRotIM.h  TimeStepperEigenFitLinearSMWIM.h  TimeStepperEigenFitSI.h  TimeStepperEigenFitSMWIM.h  resultsUtilities.h
src/Examples/: CMakeLists.txt  example10.cpp  exampleBE.cpp  exampleERE.cpp  exampleEigenFit.cpp  exampleEigenFitARAPRIM.cpp  exampleEigenFitARAPRIM.hpp  exampleEigenFitCoRotRIM.cpp  exampleEigenFitLinearRIM.cpp  exampleEigenFitRIM.cpp  exampleEigenFitRIMdynamic1.cpp  exampleEigenFitRIMdynamic2.cpp  exampleExponentialIMEX.cpp  exampleIM.cpp  exampleSI.cpp  exampleTwistingBar.cpp
src/ExponentialIMEX/: CMakeLists.txt
src/ExponentialIMEX/cpp/: TimeStepperSIERE.cpp  test_matrix_free.cpp
src/ExponentialIMEX/include/: ExponentialIMEX.h  SparseGenRealShiftSolvePardiso.h  TimeStepperBE.h  TimeStepperERE.h  TimeStepperIM.h  TimeStepperSI.h  TimeStepperSIERE.h  TimeStepperSIIMEX.h
src/FEM/include/: Element.h  ElementTypes.h  EnergyNeohookean.h  EnergyNeohookeanHFixed.h  EnergyPrincipalStretch.h  EnergyPrincipalStretchHFixed.h  FEMIncludes.h  PhysicalSystemFEM.h  QuadratureExact.h  UtilitiesFEM.h
src/MATLAB/: CMakeLists.txt
src/SolversLinear/include/: SolverPardiso.h
src/SpectraPardiso/cpp/: SpectraRegularInversePardiso.cpp
src/SpectraPardiso/include/: SparseCholeskyPardiso.h  SparseRegularInversePardiso.h
